--- a/i_talks.html
+++ b/i_talks.html
@@ -50,6 +50,18 @@ International Symposium on Mathematical Programming, Amsterdam, Netherlands, Jul
 </p>
 
 <p>
+Machine Learning Summer School (MLSS), Okinawa Institute of Science and Technology (OIST), Okinawa, Japan, March 1-12, 2027 (invited lecture, 2 x 90 mins)
+</p>
+
+<p>
+The Fortieth Annual Conference on Neural Information Processing Systems (NeurIPS 2026), Sydney, Australia, December 6-12, 2026
+</p>
+
+<p>
+<a href="https://icml.cc/Conferences/2026">Fourty-Third International Conference on Machine Learning (ICML 2026)</a>, Seoul, South Korea, July 6-11, 2026
+</p>
+
+<p>
 <a href="https://www.siam.org/conferences-events/siam-conferences/op26/">SIAM Conference on Optimization (OP26)</a>, Edinburgh, Scotland, June 2-5, 2026
 </p>
 
@@ -58,17 +70,13 @@ ELLIIT Symposium on Optimization for Learning, Lund, Sweden, May 6-8, 2026 (invi
 </p>
 
 <p>
-<a href="http://www.icmiconf.com">IEEE 5th International Conference on Computing and Machine Intelligence (ICMI 2026)</a>, King Faisal University in Al-Ahsa, Kingdom of Saudi Arabia, April 7-10, 2026 (keynote)
-</p>
-
-<p>
 <a href="https://iclr.cc/Conferences/2026">ICLR 2026</a>, Rio de Janeiro, Brazil, April 23-27, 2026
 </p>
 
 <p>
-<a href="https://www.icmiconf.com">IEEE 5th International Conference on Computing and Machine Intelligence  (ICMI 2026)</a>, King Faisal University, Al Ahsa, Saudi Arabia, 
-April 7-10, 2026 ()
+<a href="http://www.icmiconf.com">IEEE 5th International Conference on Computing and Machine Intelligence (ICMI 2026)</a>, King Faisal University in Al-Ahsa, Kingdom of Saudi Arabia, April 7-10, 2026 (keynote)
 </p>
+
 
 <p>
 <a href="https://simons.berkeley.edu/workshops/learning-heterogeneous-sources#simons-tabs">Workshop on Learning from Heterogeneous Sources</a>, Simons Institute, Berkeley, February 23-27, 2026 (invited by Virginia Smith)
