2023 Charles Broyden Prize

--- a/index.html
+++ b/index.html
@@ -45,6 +45,63 @@
         <div id="content">
 
 
+
+<h3>January 17, 2026</h3>
+
+<h1>2023 Charles Broyden Prize</h1>
+
+
+Together with three of my (then present and now former) KAUST PhD students
+ <ul>
+ <li>Samuel Horváth (now Assistant Professor at MBZUAI, Abu Dhabi),  </li>
+ <li> Dmitry Kovalev (now Research Scientist at Yandex, Moscow),  </li>
+ <li> Konstantin Mishchenko (now Research Scientist at Meta, Paris)  </li>
+  </ul>
+and collaborator
+ <ul>
+ <li> Sebastian U Stich (now Faculty at CISPA, Saarbrücken; who was visiting us at KAUST at the time)</li>
+ </ul>
+we have won the <b>2023 Charles Broyden Prize</b> for the paper
+<a href="https://www.tandfonline.com/doi/full/10.1080/10556788.2022.2117355">Stochastic distributed learning with gradient quantization and double-variance reduction</a>.
+
+<br><br>
+The Charles Broyden Prize is an annual international award honoring the best paper published in the journal Optimization Methods and Software (OMS) during the preceding year. Established in 2009, the prize commemorates the life and work of British mathematician Charles George Broyden (1933–2011), a pioneer in numerical optimization known for his namesake methods and his role in the development of the BFGS algorithm. 
+<br> <br>
+
+Here is the <a href="https://www.tandfonline.com/journals/goms20/collections/best-paper-charles-broyden-prize">list of previous Charles Broyden Prize holders.</a>
+
+<br> <br>
+Personally, I consider this prize to be shared with i) the authors of the original 2019 "DIANA paper",
+ <ul>
+ <li> Konstantin Mishchenko, Eduard Gorbunov, Martin Takáč 
+and Peter Richtarik. <a href="https://arxiv.org/abs/1901.09269">Distributed learning with compressed gradient differences</a>, arXiv preprint arXiv:1901.09269, 2019</li>
+</ul>
+which was the inspiration for the above award-winning follow-up work in which we polished, generalized and improved it, ii) the authors of the 2018 "SEGA paper",
+ <ul>
+ <li>Filip Hanzely, Konstantin Mishchenko, and Peter Richtarik. <a href="https://proceedings.neurips.cc/paper_files/paper/2018/file/fc2c7c47b918d0c2d792a719dfb602ef-Paper.pdf">SEGA: Variance reduction via gradient sketching</a>, NeurIPS 2018, 
+ </li>
+</ul>
+which can be seen as a single-node variant of DIANA, as well as iii) the authors of the even earlier 2018 "JacSketch paper", 
+ <ul>
+ <li>Robert M. Gower, Peter Richtarik and Francis Bach. <a href="https://link.springer.com/article/10.1007/s10107-020-01506-0">Stochastic quasi-gradient methods: Variance reduction via Jacobian sketching</a>, Mathematical Programming 188:135–192, 2021 [<a href="https://arxiv.org/abs/1805.02632">arXiv</a>]
+  </li>
+</ul>
+which was the inspiration for SEGA.
+<br><br>
+
+One can keep going like this, since every new discovery builds on prior work, but I'll stop here.  So, once again, congrats to the authors of the award-winning paper, as well as to the authors of all these prior works!
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
+
 <h3>December 25, 2025</h3>
 
 <h1>New Paper</h1>
