--- a/i_papers.html
+++ b/i_papers.html
@@ -59,6 +59,7 @@ Egor Shulgin, Grigory Malinovsky, Sarit Khirirat, and Peter Richtárik<br>
 [297] 
 Adrien Fradin, Abdurakhmon Sadiev, Laurent Condat, and Peter Richtárik<br>
 <b>Tight lower bounds and optimal algorithms for stochastic nonconvex optimization with heavy-tailed noise</b><br>
+28th International Conference on Artificial Intelligence and Statistics (AISTATS 2026) <br>
 [<a href="https://arxiv.org/abs/2512.18713">arXiv</a>] [method: NSGD-MVR, NSGD-Hess, D-clip-NSGD-MVR, Clipped NSGD-Hess, SGD-MVR] <br><br> 
 
 [296] 
@@ -81,6 +82,7 @@ Abdurakhmon Sadiev, Yury Demidovich, Igor Sokolov, Grigory Malinovsky, Sarit Khi
 [293] 
 Egor Shulgin, Sultan AlRashed, Francesco Orabona, and Peter Richtárik<br>
 <b>Beyond the ideal: Analyzing the inexact Muon update</b><br>
+28th International Conference on Artificial Intelligence and Statistics (AISTATS 2026) <br>
 [<a href="https://arxiv.org/abs/2510.19933">arXiv</a>] [method: Muon] <br><br> 
 
 [292] 
