--- a/i_papers.html
+++ b/i_papers.html
@@ -47,6 +47,16 @@
         <div id="content"> All papers are listed below in reverse chronological order in which they appeared online.<br>
           <br>
           <meta charset="utf-8">
+
+
+<h1> Prepared in 2026 </h1>
+
+[299] 
+Laurent Condat, Artavazd Maranjyan, and Peter Richtárik<br>
+<b>BiCoLoR: Communication-efficient optimization with bidirectional compression and local training</b><br>
+<span class="important">Federated Learning Paper</span><br>  
+[<a href="https://arxiv.org/abs/2601.12400">arXiv</a>] [method: BiCoLoR] <br><br> 
+
           
 <h1> Prepared in 2025 </h1>
 
