--- a/index.html
+++ b/index.html
@@ -68,6 +68,29 @@ I am not sure yet if I will be able to travel. If I do, I'll see you in Morocco!
 
 
 
+<h3>January 18, 2026</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2601.12400">
+"BiCoLoR: Communication-Efficient Optimization with Bidirectional Compression and Local Training"</a> -
+joint work with Laurent Condat and Artavazd Maranjyan.
+<br>
+<br>
+  
+Abstract: <i>Slow and costly communication is often the main bottleneck in distributed optimization, especially in federated learning where it occurs over wireless networks. We introduce BiCoLoR, a communication-efficient optimization algorithm that combines two widely used and effective strategies: local training, which increases computation between communication rounds, and compression, which encodes high-dimensional vectors into short bitstreams. While these mechanisms have been combined before, compression has typically been applied only to uplink (client-to-server) communication, leaving the downlink (server-to-client) side unaddressed. In practice, however, both directions are costly. We propose BiCoLoR, the first algorithm to combine local training with bidirectional compression using arbitrary unbiased compressors. This joint design achieves accelerated complexity guarantees in both convex and strongly convex heterogeneous settings. Empirically, BiCoLoR outperforms existing algorithms and establishes a new standard in communication efficiency.</i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
 <h3>January 17, 2026</h3>
 
 <h1>2023 Charles Broyden Prize</h1>
