--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 The following papers from my <a href="file:///Users/richtap/git/PeterRichtarik.github.io/i_team.html">Optimization and Machine Learning Lab</a> were accepted to <a href="https://virtual.aistats.org/Conferences/2026">AISTATS 2026</a>, to be held in Tangier, Morocco during May 2-5, 2026:
  <ul>
  <li>Egor Shulgin, Sultan AlRashed, Francesco Orabona, and Peter Richtárik. <a href="https://arxiv.org/abs/2510.19933">Beyond the Ideal: Analyzing the Inexact Muon Update</a> </li>
- <li>Abdurakhmon Sadiev, Yury Demidovich, Igor Sokolov, Grigory Malinovsky, Sarit Khirirat, and Peter Richtárik. <a href="https://arxiv.org/abs/2511.14501">Improved Convergence in Parameter-Agnostic Error Feedback Through Momentum</a> </li>
+ <li>Adrien Fradin, Abdurakhmon Sadiev, Laurent Condat, and Peter Richtárik.<a href="https://arxiv.org/abs/2512.18713">Tight Lower Bounds and Optimal Algorithms for Stochastic Nonconvex Optimization with Heavy-Tailed Noise</a> </li>
  </ul>
 
 I am not sure yet if I will be able to travel. If I do, I'll see you in Morocco!
