--- a/i_papers.html
+++ b/i_papers.html
@@ -115,6 +115,7 @@ Kaja Gruntkowska and Peter Richtárik<br>
 [289] 
 Kaja Gruntkowska, Alexander Gaponov, Zhirayr Tovmasyan, and Peter Richtárik<br>
 <b>Error feedback for Muon and friends</b><br>
+14th International Conference on Learning Representations (ICLR 2026)<br>
 <span class="important">Muon Paper</span><br> 
 <span class="important">Federated Learning Paper</span><br>  
 [<a href="https://arxiv.org/abs/2510.00643">arXiv</a>] [method: EF21-Muon] <br><br> 
@@ -128,6 +129,7 @@ Adrien Fradin, Peter Richtárik, and Alexander Tyurin<br>
 [287] 
 Artavazd Maranjyan and Peter Richtárik<br>
 <b>Ringleader ASGD: The first asynchronous SGD with optimal time complexity under data heterogeneity</b><br>
+14th International Conference on Learning Representations (ICLR 2026)<br>
 <span class="important">Asynchronous Optimization</span><br>  
 [<a href="https://arxiv.org/abs/2509.22860">arXiv</a>] [method: Ringleader ASGD] <br><br> 
 
@@ -262,6 +264,7 @@ Advances in Neural Information Processing Systems 39 (NeurIPS 2025)</a> <br>
 [264] 
 Wojciech Anyszka, Kaja Gruntkowska, Alexander Tyurin, and Peter Richtárik<br>
 <b>Tighter performance theory of FedExProx</b><br>
+14th International Conference on Learning Representations (ICLR 2026)<br>
 <span class="important">Federated Learning Paper</span><br>   
 [<a href="https://arxiv.org/abs/2410.15368">arXiv</a>] [method: FedExProx] <br><br> 
 
