--- a/index.html
+++ b/index.html
@@ -44,6 +44,47 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+<h3>January 22, 2026</h3>
+
+<h1>Three Papers Accepted to ICLR 2026</h1>
+
+The following papers from my <a href="file:///Users/richtap/git/PeterRichtarik.github.io/i_team.html">Optimization and Machine Learning Lab</a> were accepted to <a href="https://iclr.cc/Conferences/2026">ICLR 2026</a>, to be held in Rio de Janeiro, Brazil, during April 23-27, 2026:
+ <ul>
+   <li>Kaja Gruntkowska, Alexander Gaponov, Zhirayr Tovmasyan, and Peter Richtárik. <a href="https://arxiv.org/abs/2510.00643">Error feedback for Muon and friends</a> </li>
+ <li>Artavazd Maranjyan and Peter Richtárik. <a href="https://arxiv.org/abs/2509.22860">Ringleader ASGD: The first asynchronous SGD with optimal time complexity under data heterogeneity</a> </li>
+ <li>Wojciech Anyszka, Kaja Gruntkowska, Alexander Tyurin, and Peter Richtárik.<a href="https://arxiv.org/abs/2410.15368">Tighter performance theory of FedExProx</a> </li>
+ </ul>
+ 
+
+I am not sure yet if I will be able to travel. If I do, I'll see you in Rio!
+
+<br> 
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
+
+<h3>January 24, 2026</h3>
+
+<h1>Visiting Simons Institute @ Berkeley </h1>
+
+I am on my way to Berkeley, to attend the <a href="https://simons.berkeley.edu/workshops/federated-collaborative-learning-boot-camp/schedule#simons-tabs">Bootcamp</a> jump-starting the Simons Institute Program on <a href="https://simons.berkeley.edu/programs/federated-collaborative-learning">Federated and Collaborative Learning.</a> On Monday, I will be giving a series of talks forming a tutorial on federated optimization.
+
+<br> 
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
 
 
 <h3>January 22, 2026</h3>
