--- a/i_talks.html
+++ b/i_talks.html
@@ -83,15 +83,18 @@ ELLIIT Symposium on Optimization for Learning, Lund, Sweden, May 6-8, 2026 (invi
 </p>
 
 <p>
-Bootcamp, Simons Institute Program on <a href="https://simons.berkeley.edu/programs/federated-collaborative-learning">Federated and Collaborative Learning</a>, January 26-28, 2026 (invited tutorial)
+<a href="https://simons.berkeley.edu/workshops/federated-collaborative-learning-boot-camp/schedule#simons-tabs">Bootcamp</a>, Simons Institute Program on <a href="https://simons.berkeley.edu/programs/federated-collaborative-learning">Federated and Collaborative Learning</a>, January 26-28, 2026 (invited tutorial)
 </p>
 
-<p>
-<a href="https://www.kaust.edu.sa/events/dtelm25/">KAUST Workshop on Distributed Training in the Era of Large Models</a>, November 24-25, 2025, KAUST, Thuwal, Saudi Arabia (organizer and speaker)
-</p>
+
 
 
 <h1>2025 Talks</h1>
+
+<p>
+[276]
+<a href="https://www.kaust.edu.sa/events/dtelm25/">KAUST Workshop on Distributed Training in the Era of Large Models</a>, November 24-25, 2025, KAUST, Thuwal, Saudi Arabia (organizer and speaker)
+</p>
 
 <p>
 [275]
