--- a/i_papers.html
+++ b/i_papers.html
@@ -1462,6 +1462,7 @@ Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
 
           [90] Konstantin Mishchenko, Eduard Gorbunov, Martin Takáč and Peter Richtárik<br>
           <b>Distributed learning with compressed gradient differences</b><br>
+          <a href="https://www.tandfonline.com/doi/abs/10.1080/10556788.2024.2358790">Optimization Methods and Software 40(5):1181--1196, 2025</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/1901.09269">arXiv</a>] [method: DIANA]<br>
           <br>
