--- a/i_papers.html
+++ b/i_papers.html
@@ -1128,7 +1128,8 @@ Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
 
           [139] Albert S. Berahas, Majid Jahani, Peter Richtárik, and Martin Takáč<br>
           <b>Quasi-Newton methods for deep learning: forget the past, just sample</b><br>
-          <a href="https://www.tandfonline.com/doi/full/10.1080/10556788.2021.1977806">Optimization Methods and Software, 2021</a> <br>
+          <a href="https://www.tandfonline.com/doi/full/10.1080/10556788.2021.1977806">Optimization Methods and Software 37(5):1668-1704, 2022</a> <br>
+          <span class="important">2022 Charles Broyden Prize</span><br>              
           [<a href="https://arxiv.org/abs/1901.09997v4">arXiv</a>] [method: S-LBFGS, S-LSR1]  <br>
           <br>
 
@@ -1436,7 +1437,8 @@ Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
 
           [94] Samuel Horváth, Dmitry Kovalev, Konstantin Mishchenko, Peter Richtárik and Sebastian Stich<br>
           <b>Stochastic distributed learning with gradient quantization and double variance reduction</b><br>
-          <a href="https://www.tandfonline.com/doi/full/10.1080/10556788.2022.2117355">Optimization Methods and Software 38(1), 2023</a> <br>
+          <a href="https://www.tandfonline.com/doi/full/10.1080/10556788.2022.2117355">Optimization Methods and Software 38(1):91-106, 2023</a> <br>
+          <span class="important">2023 Charles Broyden Prize</span><br>          
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/1904.05115">arXiv</a>] [method: DIANA, VR-DIANA, SVRG-DIANA]<br>
           <br>
