--- a/i_talks.html
+++ b/i_talks.html
@@ -74,6 +74,11 @@ ELLIIT Symposium on Optimization for Learning, Lund, Sweden, May 6-8, 2026 (invi
 </p>
 
 <p>
+<a href="https://iclr.cc/Conferences/2026">Stochastic Numerics Workshop</a>, KAUST, April 19-29, 2026 (invited by Raul Tempone)
+</p>
+
+
+<p>
 <a href="http://www.icmiconf.com">IEEE 5th International Conference on Computing and Machine Intelligence (ICMI 2026)</a>, King Faisal University in Al-Ahsa, Kingdom of Saudi Arabia, April 7-10, 2026 (keynote)
 </p>
 
