--- a/i_papers.html
+++ b/i_papers.html
@@ -98,6 +98,7 @@ Egor Shulgin, Sultan AlRashed, Francesco Orabona, and Peter Richtárik<br>
 [292] 
 Abdurakhmon Sadiev, Peter Richtárik, and Ilyas Fatkhullin<br>
 <b>Second-order optimization under heavy-tailed noise: Hessian clipping and sample complexity limits</b><br>
+Advances in Neural Information Processing Systems 39 (NeurIPS 2025) <br>
 [<a href="https://arxiv.org/abs/2510.10690">arXiv</a>] [method: NSGDHess,  Clip-NSGDHess] <br><br> 
 
 [291] 
