--- a/i_talks.html
+++ b/i_talks.html
@@ -82,12 +82,15 @@ ELLIIT Symposium on Optimization for Learning, Lund, Sweden, May 6-8, 2026 (invi
 <a href="http://www.icmiconf.com">IEEE 5th International Conference on Computing and Machine Intelligence (ICMI 2026)</a>, King Faisal University in Al-Ahsa, Kingdom of Saudi Arabia, April 7-10, 2026 (keynote)
 </p>
 
+<h1>2026 Talks</h1>
 
 <p>
+[278]
 <a href="https://simons.berkeley.edu/workshops/learning-heterogeneous-sources#simons-tabs">Workshop on Learning from Heterogeneous Sources</a>, Simons Institute, Berkeley, February 23-27, 2026 (invited by Virginia Smith)
 </p>
 
 <p>
+[277]
 <a href="https://simons.berkeley.edu/workshops/federated-collaborative-learning-boot-camp/schedule#simons-tabs">Bootcamp</a>, Simons Institute Program on <a href="https://simons.berkeley.edu/programs/federated-collaborative-learning">Federated and Collaborative Learning</a>, January 26-28, 2026 (invited tutorial)
 </p>
 
@@ -95,6 +98,8 @@ ELLIIT Symposium on Optimization for Learning, Lund, Sweden, May 6-8, 2026 (invi
 
 
 <h1>2025 Talks</h1>
+
+
 
 <p>
 [276]
