--- a/index.html
+++ b/index.html
@@ -44,7 +44,27 @@
       <div id="wrapper" class="main">
         <div id="content">
 
-<h3>January 22, 2026</h3>
+
+<h3>February 23, 2026</h3>
+
+<h1>Opening Keynote @ Berkeley</h1>
+
+I am visiting UC Berkeley again. This time, I am attending the Simons Institute <a href="https://simons.berkeley.edu/workshops/learning-heterogeneous-sources/schedule#simons-tabs">Workshop on Learning from Heterogeneous Sources.</a> 
+The <a href="https://www.youtube.com/live/Va7ER6bRodA?feature=share">video recording of my opening keynote "From the Broximal Point Method to Efficient Training of LLMs" is on Youtube</a> (it starts at 8' 50'').
+
+
+
+<br> 
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
+<h3>January 25, 2026</h3>
 
 <h1>Three Papers Accepted to ICLR 2026</h1>
 
@@ -74,6 +94,10 @@ I am not sure yet if I will be able to travel. If I do, I'll see you in Rio!
 <h1>Visiting Simons Institute @ Berkeley </h1>
 
 I am on my way to Berkeley, to attend the <a href="https://simons.berkeley.edu/workshops/federated-collaborative-learning-boot-camp/schedule#simons-tabs">Bootcamp</a> jump-starting the Simons Institute Program on <a href="https://simons.berkeley.edu/programs/federated-collaborative-learning">Federated and Collaborative Learning.</a> On Monday, I will be giving a series of talks forming a tutorial on federated optimization.
+
+<br> 
+<br> 
+Update: My lectures are available on Youtube: [<a href="https://www.youtube.com/live/WcHUu08CLcc">Part 1 (72 mins)</a>] [<a href="https://www.youtube.com/live/X-m8CKBmu9o?t=3s">Part 2 (72 mins)</a>] [<a href="https://www.youtube.com/live/oT02lHX6s7s">Part 3 (65 mins)</a>]
 
 <br> 
 
